--- a/app/src/main/res/layout/activity_detail_transaction.xml
+++ b/app/src/main/res/layout/activity_detail_transaction.xml
@@ -36,8 +36,8 @@
 
 
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_marginHorizontal="10dp"
                 android:layout_gravity="center"
                 android:layout_marginStart="5dp"
@@ -228,6 +228,7 @@
             android:text="Cancel Transaction"
             android:textColor="@color/colorWhite"
             android:background="@drawable/button_danger"
-            android:id="@+id/btnDetailTransactionCancel"/>
+            android:id="@+id/btnDetailTransactionCancel"
+            android:layout_marginBottom="5dp"/>
     </LinearLayout>
 </FrameLayout>
