--- a/app/src/main/res/layout/activity_new_merchant.xml
+++ b/app/src/main/res/layout/activity_new_merchant.xml
@@ -65,6 +65,13 @@
                 android:id="@+id/etMerchantNoTelp"
                 android:layout_marginVertical="20dp"/>
 
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                android:id="@+id/pbMerchant"/>
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
