--- a/app/src/main/res/layout/row_transaction.xml
+++ b/app/src/main/res/layout/row_transaction.xml
@@ -10,15 +10,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
         android:layout_margin="5dp">
 
         <ImageView
-            android:layout_width="25sp"
+            android:layout_width="20sp"
             android:layout_gravity="center"
-            android:layout_marginHorizontal="5dp"
-            android:layout_height="match_parent"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginVertical="15dp"
+            android:layout_height="20sp"
             android:id="@+id/ivRowTransactionStatus"/>
 
         <LinearLayout
@@ -29,16 +31,17 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:layout_weight="1"
                 android:text="Rp 10.000"
+                android:textStyle="bold"
+                android:textColor="@color/colorBlack"
                 android:id="@+id/tvRowTransactionTotalPrice"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
                 android:id="@+id/layoutRowTransactionCustomer"
                 android:orientation="horizontal">
                 <ImageView
