--- a/app/src/main/res/layout/activity_receipt.xml
+++ b/app/src/main/res/layout/activity_receipt.xml
@@ -3,7 +3,6 @@
 <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/layoutReceipt"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ProgressBar
@@ -15,10 +14,12 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/scroll_view_receipt">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:id="@+id/layoutReceipt"
             android:orientation="vertical">
 
             <LinearLayout
@@ -56,7 +57,7 @@
                     android:gravity="center"
                     android:textSize="16sp"
                     android:text="081234123412"
-                    android:id="@+id/tvReceiptMerchantTelp"/>
+                    android:id="@+id/tvReceiptMerchantTel"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -326,7 +327,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:gravity="bottom">
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
