--- a/app/src/main/res/layout/row_product_cat.xml
+++ b/app/src/main/res/layout/row_product_cat.xml
@@ -3,8 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="20dp"
-    android:layout_marginVertical="10dp">
+    android:layout_marginEnd="5dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginVertical="5dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -24,7 +25,7 @@
             android:id="@+id/tvRowProductCatTitle"
             android:textColor="@color/colorBlack"
             android:textSize="24sp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:gravity="center_horizontal"/>
     </LinearLayout>
 
