--- a/app/src/main/res/layout/activity_select_customer.xml
+++ b/app/src/main/res/layout/activity_select_customer.xml
@@ -18,4 +18,12 @@
         android:layout_gravity="center"
         android:id="@+id/pbSelectCustomer"/>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom |end"
+        android:layout_margin="30dp"
+        android:src="@drawable/plus"
+        android:id="@+id/fbSelectCustomer"/>
+
 </FrameLayout>
