--- a/app/src/main/res/layout/row_cart.xml
+++ b/app/src/main/res/layout/row_cart.xml
@@ -3,7 +3,8 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp">
+    android:layout_marginHorizontal="5dp"
+    android:layout_marginVertical="2dp">
 
     <TextView
         android:layout_width="0dp"
@@ -25,14 +26,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            android:layout_margin="5dp"
+            android:textColor="@color/colorBlack"
+            android:layout_marginVertical="2dp"
+            android:layout_marginHorizontal="5dp"
             android:id="@+id/tvRowCartName"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="13sp"
-            android:layout_margin="5dp"
+            android:layout_marginVertical="2dp"
+            android:layout_marginHorizontal="5dp"
             android:id="@+id/tvRowCartPrice"/>
     </LinearLayout>
 
