--- a/app/src/main/res/layout/row_product_cat.xml
+++ b/app/src/main/res/layout/row_product_cat.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginEnd="5dp"
     android:layout_marginStart="10dp"
-    android:layout_marginVertical="5dp">
+    android:layout_marginVertical="5dp"
+    android:id="@+id/layoutRowProduct">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_margin="20sp">
+        android:layout_margin="10dp">
 
         <ImageView
             android:layout_width="120dp"
             android:layout_height="120dp"
+            android:layout_gravity="center_horizontal"
             android:id="@+id/ivRowProductCatImage"
             android:src="@drawable/default_image"/>
 
@@ -24,9 +26,15 @@
             android:layout_height="wrap_content"
             android:id="@+id/tvRowProductCatTitle"
             android:textColor="@color/colorBlack"
-            android:textSize="24sp"
-            android:layout_marginTop="5dp"
-            android:gravity="center_horizontal"/>
+            android:textSize="20sp"
+            android:layout_marginTop="5dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvRowProductTotalProduct"
+            android:textColor="@color/colorBlack"
+            android:textSize="16sp"/>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
