--- a/app/src/main/res/layout/row_product_list.xml
+++ b/app/src/main/res/layout/row_product_list.xml
@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<ImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp">
-
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:id="@+id/ivRowProductList"
-        android:layout_margin="5dp"/>
-
-</androidx.cardview.widget.CardView>
+    android:layout_width="match_parent"
+    android:layout_height="150dp"
+    android:id="@+id/ivRowProductList"/>
