--- a/app/src/main/res/layout/row_transaction.xml
+++ b/app/src/main/res/layout/row_transaction.xml
@@ -1,86 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="5dp"
-    android:layout_marginHorizontal="5dp"
-    android:layout_marginVertical="5dp">
+    android:orientation="vertical">
 
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_margin="5dp">
+        android:layout_height="wrap_content"
+        android:id="@+id/tvRowTransactionHeader"
+        android:textColor="@color/colorBlack"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:layout_margin="5dp"/>
 
-        <ImageView
-            android:layout_width="20sp"
-            android:layout_gravity="center"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginVertical="15dp"
-            android:layout_height="20sp"
-            android:id="@+id/ivRowTransactionStatus"/>
-
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="5dp"
+        android:layout_marginHorizontal="5dp"
+        android:layout_marginVertical="5dp">
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:layout_margin="5dp">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:text="Rp 10.000"
-                android:textStyle="bold"
-                android:textColor="@color/colorBlack"
-                android:id="@+id/tvRowTransactionTotalPrice"/>
+            <ImageView
+                android:layout_width="20sp"
+                android:layout_gravity="center"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginVertical="15dp"
+                android:layout_height="20sp"
+                android:id="@+id/ivRowTransactionStatus"/>
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="7dp"
-                android:id="@+id/layoutRowTransactionCustomer"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/user"
-                    android:id="@+id/ivRowTransactionCustomer"/>
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:orientation="vertical">
 
                 <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text="Rp 10.000"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorBlack"
+                    android:id="@+id/tvRowTransactionTotalPrice"/>
+
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="Customer"
-                    android:id="@+id/tvRowTransactionCustomer"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="7dp"
+                    android:id="@+id/layoutRowTransactionCustomer"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/user"
+                        android:id="@+id/ivRowTransactionCustomer"/>
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="Customer"
+                        android:id="@+id/tvRowTransactionCustomer"/>
+
+                </LinearLayout>
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="25 July 2020"
+                    android:gravity="end"
+                    android:id="@+id/tvRowTransactionDate"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="#0"
+                    android:gravity="end"
+                    android:id="@+id/tvRowTransactionCode"/>
+            </LinearLayout>
+
+
         </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="25 July 2020"
-                android:gravity="end"
-                android:id="@+id/tvRowTransactionDate"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="#0"
-                android:gravity="end"
-                android:id="@+id/tvRowTransactionCode"/>
-        </LinearLayout>
-
-
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
