--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,11 +5,16 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:title="@string/menu_home" />
+            android:id="@+id/nav_check_out"
+            android:title="Check Out" />
+
         <item
-            android:id="@+id/nav_product"
-            android:title="@string/product" />
+            android:id="@+id/nav_manage_product"
+            android:title="Manage Products" />
+
+        <item
+            android:id="@+id/nav_catalog"
+            android:title="Catalog" />
 
         <item
             android:id="@+id/nav_customer"
@@ -27,11 +32,5 @@
             android:id="@+id/nav_setting"
             android:title="Settings" />
 
-        <item
-            android:id="@+id/nav_gallery"
-            android:title="@string/menu_gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:title="@string/menu_slideshow" />
     </group>
 </menu>
