--- a/app/src/main/res/layout/row_product.xml
+++ b/app/src/main/res/layout/row_product.xml
@@ -18,6 +18,28 @@
         android:layout_height="match_parent"
         android:layout_weight="2">
 
+        <FrameLayout
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:id="@+id/layoutRowProductDefaultImage">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@color/colorPrimary"/>
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:text="P"
+                android:textSize="36sp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/colorBlack"
+                android:id="@+id/tvRowProductFirstName"/>
+        </FrameLayout>
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
