--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/nav_check_out"
         android:name="com.chcreation.pointofsale.home.HomeFragment"
-        android:label="@string/menu_home"
+        android:label="Check Out"
         tools:layout="@layout/fragment_home">
 
     </fragment>
