--- a/app/src/main/res/layout/row_customer_transaction.xml
+++ b/app/src/main/res/layout/row_customer_transaction.xml
@@ -25,6 +25,7 @@
             android:layout_height="match_parent"
             android:layout_weight="7"
             android:textSize="20sp"
+            android:gravity="center_vertical"
             android:textColor="@color/colorBlack"
             android:id="@+id/tvRowCustomerTransactionReceipt"/>
 
@@ -33,7 +34,7 @@
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:gravity="center"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textColor="@color/colorBlack"
             android:id="@+id/tvRowCustomerTransactionDate"/>
 
