--- a/app/src/main/res/layout/fragment_customer_detail_manage_customer.xml
+++ b/app/src/main/res/layout/fragment_customer_detail_manage_customer.xml
@@ -13,7 +13,8 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        android:id="@+id/layoutManageCustomerDefaultImage">
+        android:id="@+id/layoutManageCustomerDefaultImage"
+        android:visibility="gone">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="100dp"
