--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -50,4 +50,14 @@
             android:id="@+id/action_nav_slideshow_to_nav_home"
             app:destination="@id/nav_check_out" />
     </fragment>
+
+    <fragment
+        android:id="@+id/nav_user_list"
+        android:name="com.chcreation.pointofsale.user.UserListFragment"
+        android:label="User List"
+        tools:layout="@layout/fragment_user_list" >
+        <action
+            android:id="@+id/action_nav_slideshow_to_nav_home"
+            app:destination="@id/nav_check_out" />
+    </fragment>
 </navigation>
