--- a/app/src/main/res/layout/activity_new_product.xml
+++ b/app/src/main/res/layout/activity_new_product.xml
@@ -175,7 +175,7 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/etProductStock"
                         android:inputType="number"
-                        android:hint="1"
+                        android:text="0"
                         android:textAlignment="center"
                         android:layout_weight="2"/>
 
