--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -27,8 +27,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom |end"
-        android:layout_margin="30dp"
+        android:layout_marginBottom="80dp"
+        android:layout_marginEnd="30dp"
         android:src="@drawable/plus"
         android:id="@+id/fbUserList"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_danger"
+        android:text="Log Out"
+        android:textColor="@color/colorWhite"
+        android:layout_gravity="bottom"
+        android:layout_margin="5dp"
+        android:id="@+id/btnLogOut"/>
 
 </FrameLayout>
