--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -54,10 +54,21 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:orientation="horizontal"
         android:gravity="bottom">
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:gravity="center"
+            android:text="..."
+            android:textStyle="bold"
+            android:id="@+id/ivProductDetailMoreOptions"
+            android:background="@drawable/button_border"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="8"
             android:id="@+id/btnProductDetail"
             android:background="@drawable/button_border_fill"
             android:text="Share"
