--- a/app/src/main/res/layout/row_payment_list.xml
+++ b/app/src/main/res/layout/row_payment_list.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="55dp"
     android:layout_margin="5dp"
     android:elevation="10dp">
 
@@ -31,6 +31,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
+                android:textColor="@color/colorBlack"
                 android:id="@+id/tvRowListPaymentTotalReceived"/>
 
             <TextView
@@ -43,7 +44,7 @@
 
         <TextView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="3"
             android:gravity="center"
             android:id="@+id/tvRowListPaymentDate"/>
