--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -32,9 +32,9 @@
             android:id="@+id/nav_analytics"
             android:title="Analytic" />
 
-        <item
-            android:id="@+id/nav_setting"
-            android:title="Settings" />
+<!--        <item-->
+<!--            android:id="@+id/nav_setting"-->
+<!--            android:title="Settings" />-->
 
     </group>
 </menu>
