--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -60,4 +60,14 @@
             android:id="@+id/action_nav_slideshow_to_nav_home"
             app:destination="@id/nav_check_out" />
     </fragment>
+
+    <fragment
+        android:id="@+id/nav_analytics"
+        android:name="com.chcreation.pointofsale.analytic.AnalyticFragment"
+        android:label="Analytic"
+        tools:layout="@layout/fragment_analytic" >
+        <action
+            android:id="@+id/action_nav_slideshow_to_nav_home"
+            app:destination="@id/nav_check_out" />
+    </fragment>
 </navigation>
