--- a/app/src/main/res/layout/activity_detail_transaction.xml
+++ b/app/src/main/res/layout/activity_detail_transaction.xml
@@ -208,6 +208,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="5dp"
             android:textColor="@color/colorPrimary"
+            android:layout_marginHorizontal="5dp"
             android:text="Receipt"
             android:background="@drawable/button_border"
             android:id="@+id/btnDetailTransactionReceipt"/>
@@ -217,6 +218,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="5dp"
             android:textColor="@color/colorPrimary"
+            android:layout_marginHorizontal="5dp"
             android:text="Confirm Payment"
             android:background="@drawable/button_border"
             android:id="@+id/btnDetailTransactionConfirmPayment"/>
@@ -225,6 +227,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Cancel Transaction"
+            android:layout_marginHorizontal="5dp"
             android:textColor="@color/colorWhite"
             android:background="@drawable/button_danger"
             android:id="@+id/btnDetailTransactionCancel"
