--- a/app/src/main/res/layout/activity_receipt.xml
+++ b/app/src/main/res/layout/activity_receipt.xml
@@ -63,11 +63,12 @@
                     android:orientation="horizontal"
                     android:layout_marginTop="5dp">
 
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:src="@drawable/user"
-                        android:layout_marginEnd="10dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="14sp"
+                        android:text="Cashier : "/>
 
                     <TextView
                         android:layout_width="match_parent"
@@ -82,7 +83,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
                     android:background="@color/colorBlack"
-                    android:layout_marginVertical="10dp"/>
+                    android:layout_marginVertical="7dp"/>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
@@ -117,7 +118,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
                     android:background="@color/colorBlack"
-                    android:layout_marginVertical="10dp"/>
+                    android:layout_marginVertical="7dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -225,12 +226,11 @@
 
                 </LinearLayout>
 
-
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
                     android:background="@color/colorBlack"
-                    android:layout_marginVertical="10dp"/>
+                    android:layout_marginVertical="7dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
