--- a/app/src/main/res/layout/row_cart.xml
+++ b/app/src/main/res/layout/row_cart.xml
@@ -7,12 +7,12 @@
     android:layout_marginVertical="2dp">
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:textColor="@color/colorBlack"
         android:textSize="16sp"
-        android:layout_weight="1"
-        android:layout_margin="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="2dp"
         android:gravity="center_vertical"
         android:id="@+id/tvRowCartQty"/>
     
@@ -20,7 +20,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="5">
+        android:layout_weight="6">
 
         <TextView
             android:layout_width="wrap_content"
