--- a/app/src/main/res/layout/row_product.xml
+++ b/app/src/main/res/layout/row_product.xml
@@ -14,9 +14,8 @@
         android:gravity="center_vertical"
         android:padding="5dp">
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="2">
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
 
         <FrameLayout
             android:layout_width="50dp"
@@ -45,14 +44,17 @@
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:id="@+id/ivRowProductImage"
-            android:src="@drawable/default_image"/>
+            android:src="@drawable/default_image"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:layout_marginStart="5dp"
         android:layout_weight="6">
 
         <TextView
@@ -73,7 +75,8 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:id="@+id/tvRowProductStock"
-        android:gravity="center_vertical"
+        android:gravity="center_vertical|end"
+        android:paddingEnd="5dp"
         android:layout_weight="2"/>
 
 </LinearLayout>
